methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:9: error: not found: value avances
    avance;avance;avance;avance;avance;avance;avance;avances}
                                                     ^PictureMono2:14: error: not found: value avances
  gauche;avance;avance;avance;avance;avance;avance;avance;avances;droite;
                                                          ^